--- a/mobileTarefa/app.json
+++ b/mobileTarefa/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "mobileTarefa",
-    "slug": "mobileTarefa",
+    "name": "appTarefas",
+    "slug": "appTarefas",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
