--- a/mobileTarefa/package.json
+++ b/mobileTarefa/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mobiletarefa",
+  "name": "appacesso",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -9,16 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-navigation/bottom-tabs": "^7.3.13",
-    "@react-navigation/native": "^7.1.9",
-    "@react-navigation/stack": "^7.3.2",
-    "expo": "~53.0.9",
+    "@react-native-community/datetimepicker": "^8.4.1",
+    "@react-navigation/bottom-tabs": "^7.3.14",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/stack": "^7.2.10",
+    "expo": "53.0.9",
+    "expo-image-picker": "^16.0.6",
     "expo-status-bar": "~2.2.3",
-    "firebase": "^11.8.1",
+    "firebase": "^11.6.0",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.2",
-    "react-native-screens": "~4.10.0"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
