--- a/mobileTarefa/package.json
+++ b/mobileTarefa/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.2.10",
+    "cloudinary": "^2.7.0",
     "expo": "53.0.9",
     "expo-image-picker": "^16.0.6",
     "expo-status-bar": "~2.2.3",
